--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,9 +1,9 @@
 # Skills
 
-# Education
-- skill: Education
-  description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
-
-# Leadership
+# React js
+- skill: Reactjs
+  description: iam a react developer
+  
+  # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
